// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serverConfig > createDb 1`] = `
[
  "url",
  "name",
]
`;

exports[`serverConfig > createDb 2`] = `
[
  "url",
  "authToken",
  "state",
  "name",
  "total",
  "completed",
]
`;

exports[`serverConfig > deleteDb 1`] = `
[
  "name",
]
`;

exports[`update a robot name 1`] = `
{
  "done": true,
  "error": false,
  "mutator": "updateRobotName",
  "request": {
    "id": "123",
    "name": "beep",
  },
  "response": {
    "ok": true,
  },
  "value": "responded",
}
`;
